# poplog

./: .gitignore  CHANGES-PACKAGES.txt  CHANGES.txt  Makefile  corepop  current-poplog  poplink_cmnd  userguide.html
INSTALL/: LINK_USING_NEWPOP  USERLINK_ORIGINAL_MOTIF_POPLOG  poplog1.sh  poplog2  poplog2.sh  tarcp
Poplib/: Poplogfiles  vedfiletypes.p
config/: .gitignore  Makefile  Makefile.in  config  config.h.in  config.sample  configure.ac  make  make.in  make.sample  system.ph.in
man/man1/: pop11.1  poplog.1  userguide.html
pop/: CDIRS
pop/com/: AREADME  buildobjlib  mkXpm  mkct  mkeliza-speak  mkgblocks  mklogic  mkplog  mkploglisp  mkpml  mkstartup  mkstartup.bham  mksun  pop_system_v  popenv-old  popenv.sh  poplog  poplog.sh
pop/doc/: index
pop/help/: index  local  message.login  metaflavours  news.v10  news.v14_1  news.v14_5  objectclass_help  pack  plognews.v14  xnews.v13_9
pop/lib/: .gitignore
pop/lisp/: mklisprefindex.p
pop/pop/: .gitignore  Makefile  basepop11  basepop11.map  newpop11  oldpop11  pgcomp  popenv  poplibr  poplink.psv  poplogin  prolog  ref  vedinit
pop/ref/: index  popindex.YZ  popindex.lo  popindex.ss  popindex.tu  popindex.vv
pop/src/: aextern.s  afloat.s  alisp.s  alphabefore.p  amain.s  amain.s.1996  amisc.s  and_test.p  appdic.p  appproperty.p  arith1.p  arith2.p  arithcmp.p  array_cons.p  arrays.p  bigint.p  bigint_divide.p  chario.p  clawback.p  complex_exp.p  complex_float.p  complex_power.p  complex_sqrt.p  consclosure.p  consident.p  conslist.p  control.p  (+141 more)
test/: hudson_build_and_test  test_uses_compile.sh
v15.6.4/: CHANGES.txt  poplog  poplog.sh
(+2784 files in other folders)
